New feature => Init Qb event integration

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -48,4 +48,9 @@
     <PackageReference Include="QbSync.QbXml" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName).Test</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
